# satterc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.toml  justfile  pyproject.toml  test.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: about.md  index.md
docs/API/: satterc.config.md
docs/API/satterc.cli/: cli.md  index.md  setup.md
docs/API/satterc.pipeline/: grid.md  resample.md
docs/API/satterc.pipeline/pipeline.outputs/: monthly.md
docs/API_Reference/: pmodel.md  splash.md
docs/CLI Reference/: index.md
docs/Examples/: 00-getting-started-csv.md  00-getting-started.md  01-demo.md  02-soil-moisture-csv.md  02-soil-moisture.md  03-pft-parameters-csv.md  03-pft-parameters.md  justfile
docs/Examples/01-demo/: config.toml  index.md  notebook.py
docs/Getting Started/: concepts.md  contributing.md  installation.md  quickstart.md
docs/Models/: index.md  pmodel.md  splash.md
docs/Modules/: Config.md  Driver.md  inputs.md  pmodel.md  splash.md
docs/Modules/Data/: io.md  resample.md  variables.md
docs/Modules/Dynamic/: aggregate.md  unpack.md
docs/Modules/Extras/: synthetic_inputs.md
docs/Modules/Inputs/: daily.md  grid.md  monthly.md  static.md  weekly.md
docs/Modules/Models/: pmodel.md  rothc.md  sgam.md  splash.md
docs/Modules/Outputs/: daily.md  monthly.md  weekly.md
docs/Usage/: cli.md  config.md  data-formats.md  troubleshooting.md
docs/api/: satterc.dag.driver.md  satterc.driver.md
docs/api/satterc.cli/: data_gen.md  graph.md  index.md  run.md  version.md
docs/api/satterc.dag/: pmodel.md  resample.md  rothc.md  sgam.md  splash.md
docs/api/satterc.pipeline/pipeline.outputs/: daily.md  static.md  weekly.md
docs/api/satterc.pipeline/satterc.pipeline.inputs/: daily.md  monthly.md  static.md  weekly.md
docs/api/satterc.pipeline/satterc.pipeline.models/: pmodel.md  rothc.md  sgam.md  splash.md
docs/api/satterc.setup_utils/: config_gen.md
docs/api/satterc.setup_utils/data_gen/: daily.md  fallback.md  generate.md  static.md
docs/getting_started/: concepts.md  contributing.md  installation.md  quickstart.md
docs/javascripts/: marimo-button.js
docs/models/: index.md  pmodel.md  rothc.md  sgam.md  splash.md
docs/usage/: api.md  cli.md  config.md  custom-modules.md  data-formats.md  troubleshooting.md
examples/: 00-getting-started-csv.py  00-getting-started.py  01-demo.py  02-soil-moisture-csv.py  02-soil-moisture.py  03-pft-parameters-csv.py  03-pft-parameters.py  full_pipeline.py  justfile  my_first_pipeline.py  pft_parameters.py  soil_moisture.py
overrides/: main.html
src/satterc/: __init__.py  _hamilton_utils.py  _version.py  cli.py  config.py  config_generator.py  driver.py  io.py  outputs.py  spatial.py  utils.py  viz.py
src/satterc/cli/: __init__.py  config_gen.py  data_gen.py  graph.py  init_config.py  run.py  setup.py  synthetic.py  version.py
src/satterc/dag/: __init__.py  _hamilton_fixes.py  _utils.py  derive.py  driver.py  pmodel.py  resample.py  rothc.py  sgam.py  splash.py
src/satterc/data/: io.py  resample.py  synthetic_inputs.py  tmp.py  variables.py
src/satterc/dynamic/: __init__.py  aggregate.py  unpack.py
src/satterc/extras/: generate_synthetic_data.py  synthetic_inputs.py
src/satterc/extras/data/: daily.nc  monthly.nc  static.nc  weekly.nc
src/satterc/inputs/: __init__.py  _utils.py  daily.py  grid.py  load.py  monthly.py  static.py  weekly.py
src/satterc/models/: _utils.py  pmodel.py  rothc.py  sgam.py  splash.py
src/satterc/outputs/: daily.py  monthly.py  weekly.py
src/satterc/pipeline/: __init__.py  _hamilton_fixes.py  _utils.py  resample.py
src/satterc/pipeline/inputs/: __init__.py  _utils.py  _validators.py  daily.py  grid.py  monthly.py  static.py  weekly.py
src/satterc/pipeline/inputs/single_point/: _utils.py  daily.py  monthly.py  (+2 more)
src/satterc/pipeline/models/: __init__.py  _utils.py  pmodel.py  rothc.py  sgam.py  splash.py
src/satterc/pipeline/outputs/: __init__.py  _utils.py  daily.py  monthly.py  static.py  weekly.py
src/satterc/setup_utils/: __init__.py  config_gen.py
src/satterc/setup_utils/data_gen/: __init__.py  daily.py  fallback.py  generate.py  static.py
src/satterc/synthetic_data/: __init__.py  daily.py  generate.py  merged.py  static.py
src/satterc/synthetic_data/data/: static.nc  weekly.nc
src/satterc/utils/: make_config.py
tests/: _old_conftest.py  conftest.py  test_cli.py  test_config.py  test_config.toml  test_config_gen.py  test_dag_derive.py  test_dag_driver.py  test_dag_model_helpers.py  test_fallback.py  test_grid.py  test_hamilton_fixes.py  test_integration.py  test_io_extra.py  test_io_shapes.py  test_resample.py  test_single_point_io.py  test_splash.py  test_synthetic_data.py  test_synthetic_integration.py  test_xarray_io.py
(+5 files in other folders)
